@@ -30,7 +30,7 @@ import com.sun.ws.rest.impl.MultivaluedMapImpl;
 import com.sun.ws.rest.impl.TestHttpRequestContext;
 import com.sun.ws.rest.impl.TestHttpResponseContext;
 import com.sun.ws.rest.impl.application.WebApplicationImpl;
-import com.sun.ws.rest.impl.test.util.TestingResourceConfig;
+import com.sun.ws.rest.api.core.DefaultResourceConfig;
 import java.io.ByteArrayInputStream;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -166,7 +166,7 @@ public abstract class AbstractBeanTester extends TestCase {
         String baseUri = BASE_URI;
         
         WebApplicationImpl a = new WebApplicationImpl();
-        ResourceConfig c = new TestingResourceConfig(r);
+        ResourceConfig c = new DefaultResourceConfig(r);
 
         a.initiate(null, c);
 
